--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
 
 .stack-item {
   padding: 5px;
-  border: 1px solid darkgray;
+  border: 1px solid gray;
   margin-top: 5px;
   background-color: #E8F8F5;
 }
